--- a/styles/newzealand.css
+++ b/styles/newzealand.css
@@ -1,5 +1,6 @@
 .landmarks {
     display: flex;
+    width: auto;
     flex-wrap: wrap;
     justify-content: space-around;
     text-align: center;
